--- a/HangSwift/Base.lproj/Main.storyboard
+++ b/HangSwift/Base.lproj/Main.storyboard
@@ -977,7 +977,7 @@
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" spellCheckingType="no"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jHR-ie-yGg" customClass="RoundedCornerTextField" customModule="HangSwift" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="60" width="312" height="30"/>
@@ -987,7 +987,7 @@
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" spellCheckingType="no"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Mc-q1-CtO" customClass="RoundedCornerTextField" customModule="HangSwift" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="120" width="312" height="30"/>
@@ -1032,6 +1032,91 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KjT-xs-POG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-594.39999999999998" y="138.98050974512745"/>
+        </scene>
+        <!--PickupVC-->
+        <scene sceneID="4Ds-ry-rib">
+            <objects>
+                <viewController storyboardIdentifier="PickupVC" id="xqh-Wf-Dt8" customClass="PickupVC" customModule="Come" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hcP-E2-6Py"/>
+                        <viewControllerLayoutGuide type="bottom" id="hwQ-dR-B0j"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q7e-sG-HZv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WDJ-pr-RxU">
+                                <rect key="frame" x="20" y="20" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="SiJ-eF-ug0"/>
+                                    <constraint firstAttribute="height" constant="30" id="urE-Qj-df6"/>
+                                </constraints>
+                                <state key="normal" image="cancelBtn"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TB5-Iz-RjT">
+                                <rect key="frame" x="82" y="15" width="211.5" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRy-Yg-iXU">
+                                        <rect key="frame" x="0.0" y="0.0" width="113.5" height="40"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="36"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HERE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E1o-Mn-bY7">
+                                        <rect key="frame" x="113.5" y="0.0" width="98" height="40"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="36"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="ORy-j9-uTh"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wm1-a8-zbz" customClass="RoundedShadowButton" customModule="Come" customModuleProvider="target">
+                                <rect key="frame" x="16" y="587" width="343" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="iHh-oo-GaQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="28"/>
+                                <state key="normal" title="ACCEPT TRIP">
+                                    <color key="titleColor" red="0.18478795079999999" green="0.606635441" blue="0.86842948720000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Would you like to pick up this passenger?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kap-V9-zpo">
+                                <rect key="frame" x="16" y="543.5" width="343" height="23.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Grk-sh-g5G" customClass="RoundMapView" customModule="Come" customModuleProvider="target">
+                                <rect key="frame" x="25" y="171" width="325" height="325"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="325" id="PXD-Jx-Zdb"/>
+                                    <constraint firstAttribute="height" constant="325" id="VBv-BZ-6je"/>
+                                </constraints>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.18478795079999999" green="0.606635441" blue="0.86842948720000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="hwQ-dR-B0j" firstAttribute="top" secondItem="Wm1-a8-zbz" secondAttribute="bottom" constant="20" id="4IX-L2-Yu5"/>
+                            <constraint firstItem="TB5-Iz-RjT" firstAttribute="centerX" secondItem="Q7e-sG-HZv" secondAttribute="centerX" id="7PJ-Aw-voK"/>
+                            <constraint firstItem="WDJ-pr-RxU" firstAttribute="leading" secondItem="Q7e-sG-HZv" secondAttribute="leading" constant="20" id="AcT-Ul-q8Q"/>
+                            <constraint firstItem="Grk-sh-g5G" firstAttribute="centerX" secondItem="Q7e-sG-HZv" secondAttribute="centerX" id="Gvb-CQ-WCP"/>
+                            <constraint firstItem="TB5-Iz-RjT" firstAttribute="centerY" secondItem="WDJ-pr-RxU" secondAttribute="centerY" id="HYb-aE-GaE"/>
+                            <constraint firstItem="Wm1-a8-zbz" firstAttribute="leading" secondItem="Q7e-sG-HZv" secondAttribute="leadingMargin" id="LJK-ae-eYe"/>
+                            <constraint firstItem="Wm1-a8-zbz" firstAttribute="top" secondItem="kap-V9-zpo" secondAttribute="bottom" constant="20" id="PRa-i8-0e9"/>
+                            <constraint firstItem="kap-V9-zpo" firstAttribute="leading" secondItem="Q7e-sG-HZv" secondAttribute="leadingMargin" id="U4i-Dv-82b"/>
+                            <constraint firstItem="WDJ-pr-RxU" firstAttribute="top" secondItem="Q7e-sG-HZv" secondAttribute="top" constant="20" id="cxh-K5-isw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Wm1-a8-zbz" secondAttribute="trailing" id="fjN-dz-nWX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kap-V9-zpo" secondAttribute="trailing" id="jzk-dq-lnE"/>
+                            <constraint firstItem="Grk-sh-g5G" firstAttribute="centerY" secondItem="Q7e-sG-HZv" secondAttribute="centerY" id="x9A-SG-ZGh"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sKh-vo-RHu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2225" y="137"/>
         </scene>
     </scenes>
     <resources>
